# yuki

./: CLAUDE.md  LICENSE  README.md  yuki-architecture.md  yuki-description (1).md  yuki-ui.md
.github/workflows/: release.yml
app/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/.github/workflows/: release.yml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  database.rs  lib.rs  llm.rs  main.rs  models.rs
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AccountsModal.tsx  AddEntryModal.tsx  AnswerCard.test.tsx  AnswerCard.tsx  ChatBox.test.tsx  ChatBox.tsx  DropZone.tsx  FloatingMenu.tsx  LedgerModal.tsx  Modal.tsx  SettingsModal.tsx  SetupWizard.tsx  Skeleton.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Toast.tsx  UploadTypeModal.tsx  YukiStatus.tsx
app/src/components/cards/: ChartCardContent.tsx  MixedCardContent.tsx  TableCardContent.tsx  TextCardContent.tsx
app/src/lib/: currency.ts  fileProcessor.ts  llm.test.ts  llm.ts  tauri.ts
app/src/store/: appStore.test.ts  appStore.ts  toastStore.ts
app/src/test/: setup.ts
app/src/types/: index.ts
landing/: package-lock.json  package.json  tailwind.config.ts
landing/src/app/: globals.css  layout.tsx  page.tsx
